# OS

practica02a/c++/: CMakeLists.txt  main.cpp
practica02a/c++/include/: functions.h  structs.h
practica02a/c++/src/: functions.cpp
practica02b/c++/: CMakeLists.txt  main.cpp
